哈哈.又改回来了

--- a/MPFastDevLibrary.Core/MPFastDevLibrary.Core.csproj
+++ b/MPFastDevLibrary.Core/MPFastDevLibrary.Core.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>net45;net5.0</TargetFrameworks>
+    <Authors>priatewang</Authors>
+    <Description>my fast development platform.</Description>
   </PropertyGroup>
 
 </Project>
