--- a/MP.Common_Example/MP.Common_Example.csproj
+++ b/MP.Common_Example/MP.Common_Example.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MPFastDevLibrary.Common\MPFastDevLibrary.Common.csproj" />
+    <ProjectReference Include="..\MPFastDevLibrary.Common\MPFastDevLibrary.Core.csproj" />
   </ItemGroup>
 
 </Project>
