--- a/MPFastDevLibrary.Core/MPFastDevLibrary.Core.csproj
+++ b/MPFastDevLibrary.Core/MPFastDevLibrary.Core.csproj
@@ -4,6 +4,12 @@
     <TargetFrameworks>net45;net5.0</TargetFrameworks>
     <Authors>priatewang</Authors>
     <Description>my fast development platform.</Description>
+    <AssemblyName>MPFastDevLibrary.Core</AssemblyName>
+    <RootNamespace>MPFastDevLibrary</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Ioc\" />
+  </ItemGroup>
 
 </Project>
