--- a/MPFastDevLibrary.Mvvm/MPFastDevLibrary.Mvvm.csproj
+++ b/MPFastDevLibrary.Mvvm/MPFastDevLibrary.Mvvm.csproj
@@ -1,14 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
+    <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MP.Common_Example\MP.Common_Example.csproj" />
     <ProjectReference Include="..\MPFastDevLibrary.Core\MPFastDevLibrary.Core.csproj" />
-    <ProjectReference Include="..\MPFastDevLibrary.Mvvm\MPFastDevLibrary.Mvvm.csproj" />
   </ItemGroup>
 
 </Project>
