--- a/MPFastDevLibrary.Core/MPFastDevLibrary.Core.csproj
+++ b/MPFastDevLibrary.Core/MPFastDevLibrary.Core.csproj
@@ -1,17 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;net5.0</TargetFrameworks>
+    <TargetFrameworks>net45;net452;net46;net5.0;net6.0</TargetFrameworks>
     <Authors>priatewang</Authors>
     <Description>my fast development platform.</Description>
     <AssemblyName>MPFastDevLibrary.Core</AssemblyName>
     <RootNamespace>MPFastDevLibrary</RootNamespace>
-    <Version>1.0.0.2</Version>
+    <Version>1.0.0.3</Version>
     <Authors>Piratewang</Authors>
     <Company>CompanyPiratewang</Company>
     <Product>MPFastDevPlatform</Product>
-    <AssemblyVersion>1.0.0.2</AssemblyVersion>
-    <FileVersion>1.0.0.2</FileVersion>
+    <AssemblyVersion>1.0.0.3</AssemblyVersion>
+    <FileVersion>1.0.0.3</FileVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
