--- a/MPFastDevLibrary.Core/MPFastDevLibrary.Core.csproj
+++ b/MPFastDevLibrary.Core/MPFastDevLibrary.Core.csproj
@@ -6,18 +6,19 @@
     <Description>my fast development platform.</Description>
     <AssemblyName>MPFastDevLibrary.Core</AssemblyName>
     <RootNamespace>MPFastDevLibrary</RootNamespace>
-    <Version>1.0.0.5</Version>
+    <Version>1.0.0.6</Version>
     <Authors>Piratewang</Authors>
     <Company>CompanyPiratewang</Company>
     <Product>MPFastDevPlatform</Product>
-    <AssemblyVersion>1.0.0.5</AssemblyVersion>
-    <FileVersion>1.0.0.5</FileVersion>
+    <AssemblyVersion>1.0.0.6</AssemblyVersion>
+    <FileVersion>1.0.0.6</FileVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Copyright ©  2022</Copyright>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <PackageProjectUrl>https://github.com/priatewang/MPFastDevLibrary</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
