--- a/MPFastDevLibrary.Mvvm/MPFastDevLibrary.Mvvm.csproj
+++ b/MPFastDevLibrary.Mvvm/MPFastDevLibrary.Mvvm.csproj
@@ -1,12 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFrameworks>net45;net452;net46;net462;net5.0-windows;net6.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
+    <Authors>MPFastDevPlatform</Authors>
+    <Company>Company$(Authors)</Company>
+    <Description>自定义MVVM框架</Description>
+    <RepositoryUrl></RepositoryUrl>
+    <PackageTags>mvvm;wpf</PackageTags>
+    <Copyright>Copyright ©  2023</Copyright>
+    <PackageProjectUrl>https://github.com/priatewang/MPFastDevLibrary</PackageProjectUrl>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\MPFastDevLibrary.Core\MPFastDevLibrary.Core.csproj" />
-  </ItemGroup>
 
 </Project>
